--- a/languages/wp-seo-blog-automater.pot
+++ b/languages/wp-seo-blog-automater.pot
@@ -3,11 +3,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP SEO Blog Automater 1.0.4\n"
-"Report-Msgid-Bugs-To: support@codezela.com\n"
+"Report-Msgid-Bugs-To: info@codezela.com\n"
 "POT-Creation-Date: 2026-01-20 00:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Codezela Technologies <support@codezela.com>\n"
+"Language-Team: Codezela Technologies <info@codezela.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
